# mailing-list-parser

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sql/: 00_schema.sql
src-tauri/src/: api.rs  database.rs  database_api.rs  git-config.rs  git-parser.rs  lib.rs  mail-parser.rs  main.rs  models.rs  parser.rs  search.rs  test_threading.rs  test_threading_db.rs  test_threading_full.rs  update.rs
src-tauri/src/database/: authors.rs  config.rs  connection.rs  merges.rs  mod.rs  models.rs  patches.rs  population.rs  schema.rs  threading.rs
src-tauri/tests/: integration_test.rs  parser_test.rs  test_config.rs
src/components/: AuthorPatches.css  AuthorPatches.tsx  ConfigPanel.tsx  EmailThreadView.tsx  SearchInterface.tsx  ThreadView.css  ThreadView.tsx
