[package]
name = "mailing-list-parser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mailing_list_parser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1"
# PostgreSQL database
tokio-postgres = "0.7"
postgres-types = "0.2"
# Email parsing
mailparse = "0.16.1"
regex = "1.0"
# Async runtime
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1.0"
thiserror = "2.0.16"
# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tokio-test = "0.4"

[profile.test]
opt-level = 1
debug = true
overflow-checks = true
